--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>667</width>
-    <height>412</height>
+    <width>761</width>
+    <height>575</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -18,31 +24,18 @@
     <item>
      <widget class="QCustomPlot" name="customPlot" native="true">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
        <size>
-        <width>0</width>
-        <height>300</height>
+        <width>500</width>
+        <height>500</height>
        </size>
       </property>
      </widget>
-    </item>
-    <item>
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>40</height>
-       </size>
-      </property>
-     </spacer>
     </item>
     <item>
      <widget class="QCustomPlot" name="widget" native="true">
@@ -63,10 +56,18 @@
           </spacer>
          </item>
          <item>
-          <widget class="QLineEdit" name="yRange"/>
+          <widget class="QLineEdit" name="yRange">
+           <property name="accessibleDescription">
+            <string extracomment="yRange"/>
+           </property>
+          </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="xRange"/>
+          <widget class="QLineEdit" name="xRange">
+           <property name="accessibleDescription">
+            <string extracomment="xRange"/>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QPushButton" name="runBu">
